# learning-testing

./: README.md  pyproject.toml  pytest.ini
rest_apis/: info.txt  test_todo_api.py
scripts/: my_functions.py  service.py  shapes.py
tests/: conftest.py  test_circle.py  test_markers.py  test_my_functions.py  test_rectangle.py  test_service.py
