[project]
name = "learning-testing"
version = "0.1.0"
description = ""
authors = [
    {name = "neuzan1",email = "newjan.b@reward360.co"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest (>=8.3.5,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
